--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# Authors of this project include
-@NnaemekaAlgorithim
-@yaekobbonke
+# Authors of this project:
+Nnaemeka Nwodo <nnaemekanwodo625@gmail.com>
+Yaekob Bonke <jackmanbonke@gmail.com>
 
